# experiments

./: README.md  index.html
fractal-generator/: README.md  fractal-generator.cabal  fractal-generator.hs
interference/: Gen.hs  Html.hs  Interference.hs  Js.hs  NoJuice.hs  lib.js  out.js
puzzles/: bruteForceExpr.hs
