name:                fractal-generator
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable fractal-generator
  main-is:             fractal-generator.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , JuicyPixels
  -- hs-source-dirs:      
  default-language:    Haskell2010
